	* '%cpaste foo' now assigns the pasted block as string list, instead of string
	* The ipcluster script now run by default with no security.  This is done because
	  the main usage of the script is for starting things on localhost.  Eventually
	  when ipcluster is able to start things on other hosts, we will put security
	  back.

Bug fixes
---------

	* The colors escapes in the multiengine client are now turned off on win32 as they
	  don't print correctly.
	* The :mod:`IPython.kernel.scripts.ipengine` script was exec'ing mpi_import_statement
	  incorrectly, which was leading the engine to crash when mpi was enabled.
	* A few subpackages has missing `__init__.py` files.
	* The documentation is only created is Sphinx is found.  Previously, the `setup.py`
	  script would fail if it was missing.

Backwards incompatible changes
------------------------------

	* :class:`IPython.kernel.client.Task` has been renamed
	  :class:`IPython.kernel.client.StringTask` to make way for new task types.
	* The keyword argument `style` has been renamed `dist` in `scatter`, `gather`
	  and `map`.
	* Renamed the values that the rename `dist` keyword argument can have from
	  `'basic'` to `'b'`.
	* IPython has a larger set of dependencies if you want all of its capabilities.
	  See the `setup.py` script for details.
	* The constructors for :class:`IPython.kernel.client.MultiEngineClient` and 
	  :class:`IPython.kernel.client.TaskClient` no longer take the (ip,port) tuple.
	  Instead they take the filename of a file that contains the FURL for that
	  client.  If the FURL file is in your IPYTHONDIR, it will be found automatically
	  and the constructor can be left empty.
	* The asynchronous clients in :mod:`IPython.kernel.asyncclient` are now created 
	  using the factory functions :func:`get_multiengine_client` and 
	  :func:`get_task_client`.  These return a `Deferred` to the actual client.
	* The command line options to `ipcontroller` and `ipengine` have changed to